# CleanFill

./: CleanFill.py  LICENSE  MANIFEST.in  README.md  __init__.py  bash.exe.stackdump  build-and-publish.bat  cleanfill.py  pyproject.toml  setup.cfg  setup.py  test.py
cleanfill/: __init__.py  fill.py
