[metadata]
name = CleanFill
version = 0.0.5
author = Colin Bouchard
author_email = colin.bouchard.gestion@gmail.com
description = To fill NaN value in a matrix.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CryptoAdvised/CleanFill
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True