[metadata]
name = cleanfill
version = 0.1.7
author = Colin Bouchard
author_email = colin.bouchard.gestion@gmail.com
description = Use cleanfill to fill NaN value in a matrix using various prediction algorithmes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CryptoAdvised/cleanfill
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True